tests/samples/invalid/jump_to_inner.pn
fn main() -> i32
{
	goto inner; // Invalid, the label `inner` is not in scope here.
	var i = 1;
	{
		var x = 10;
		{ // The scope of the label `inner` ends here.
			inner: // The scope of the label `inner` starts here.
			var y = 20;
			i = y;
		}
		i = x;
	}
	return: i
}
